--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(10_Million_Passwords)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(10_Million_Passwords
-    main.cpp)
+    main.cpp
+        Trie.h)
